--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@hello-pangea/dnd": "^16.6.0",
+    "@heroicons/react": "^2.1.4",
     "framer-motion": "^11.2.12",
     "next": "14.2.4",
     "react": "^18",
