--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-parallax-tilt": "^1.7.229",
     "react-use-measure": "^2.1.1"
   },
   "devDependencies": {
